--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
     "release": "angel grunt release && npm publish"
   },
   "peerDependencies": {
@@ -16,8 +15,7 @@
   "devDependencies": {
     "mocha": "~1.21.3",
     "chai": "~1.9.1",
-    "angelscripts-help": "0.0.2",
-    "grunt-git-release": "~0.1.3"
+    "angelscripts-help": "0.0.2"
   },
   "author": "Boris Filipov",
   "license": "MIT",
@@ -28,5 +26,6 @@
   "bugs": {
     "url": "https://github.com/outbounder/angelabilities-grunt/issues"
   },
-  "homepage": "https://github.com/outbounder/angelabilities-grunt"
+  "homepage": "https://github.com/outbounder/angelabilities-grunt",
+  "description": "A quick 'hack' for giving organic-angel grunt abilities. It is based on grunt 0.4 and autoloads all grunt modules found in node_modules"
 }
